--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -2732,15 +2732,12 @@ the target configuration.  This can be used to find new better ``intermediate''
 configurations or to analyse the impact of the parameters in the performance.
 
 
-To perform ablation, you can use the \code{ablation} function and specify the
-IDs of the source and target configurations.  By default, the source is taken
-as the first configuration evaluated by \irace and the target as the best
-overall configuration found. The argument \code{ab.params} can be used to
-specify a subset of the parameters considered in the ablation. The option
-\parameter{firstTest} defines how many instances are selected for the
-evaluation of configurations, if a different number of instances is required it
-must be specified in the argument \code{n.instance}.  Use the function
-\code{plotAblation} to visualize the ablation results (Fig.~\ref{fig:testAb}).
+To perform ablation, you can use the \code{ablation()} \aR function or the
+\path{ablation} command-line executable (see more details below). You may
+specify the IDs of the source and target configurations.  By default, the
+source is taken as the first configuration evaluated by \irace and the target
+as the best overall configuration found. Use the function \code{plotAblation} to visualize the ablation results
+(Fig.~\ref{fig:testAb}).
 
 <<ablation, prompt=FALSE, eval=FALSE>>=
 ablog <- ablation("irace.Rdata", src = 1, target = 60)
@@ -2762,7 +2759,7 @@ The function returns a list containing the following elements:
    \item \code{best}: Best overall configuration found.
 \end{description}
 
-We also provide a command-line executable that allows you to perform ablation without launching \aR. It is installed in the same location as the \irace command-line executable and has the following options:
+We also provide a command-line executable (\path{ablation.exe} in Windows) that allows you to perform ablation without launching \aR. It is installed in the same location as the \irace command-line executable and has the following options:
 <<ablation_cmdline, prompt=FALSE, eval=TRUE,echo=FALSE, comment="">>=
 ablation_cmdline("--help")
 @
